# strideredge_os

./: .env.example  .gitignore  AI-STRATEGY.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  QUALITY_GATES.md  README.md  app-spec.md  constitution.md  device-spec.md  frontend-spec.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
analytics/: athlete.py  biomechanics.py  coach.py  coach_eval.py  exercises.py  fitness.py  form_coach.py  grounding.py  injury_bayes.py  injury_classifier.py  injury_dataset.py  injury_literature.py  injury_model.py  injury_quality.py  injury_risk.py  injury_seed.py  injury_synth.py  injury_taxonomy.py  intensity.py  llm.py  processors.py  rag_eval.py  realtime.py  risk_assessor.py  run_analysis.py  shoe.py  sql_agent.py  strength.py  training_load.py  training_plan.py
api/: auth.py  deps.py  form.py  injuries.py  main.py  plans.py  profile.py  services.py
core/: config.py  database.py  env.py  ingest.py  jobs.py  logging.py  repository.py  seed.py
core/framework/: interfaces.py
core/parsers/: fit_parser.py
dashboard/: app.py
db/: er_diagram.mmd
db/migrations/: 001_init_schema.sql  002_add_speed.sql  003_add_distance.sql  004_add_hr_zones.sql  005_coach_verdicts.sql  006_auth_users.sql  007_strength_sets.sql  008_form_analyses.sql  009_athlete_profile.sql  010_form_modality.sql  011_strava_auth.sql  012_strava_activity_id.sql  013_form_view.sql  014_injury_reports.sql  015_form_analyses_user.sql  016_injury_symptom_text.sql  017_profile_plan_fields.sql  018_training_plans.sql
docs/adr/: 0001-pose-model-halpe26-para-pe.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts
frontend/apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/apps/web/public/videos/: CREDITS.txt
frontend/apps/web/src/: App.d.ts.map  App.js  App.js.map  App.tsx  main.js  main.js.map  main.tsx
frontend/apps/web/src/pages/: AnaliseSaude.tsx  Dashboard.d.ts  Dashboard.d.ts.map  Dashboard.js  Dashboard.js.map  Dashboard.tsx  HyroxScreen.d.ts  HyroxScreen.d.ts.map  HyroxScreen.js  HyroxScreen.js.map  HyroxScreen.tsx  Landing.d.ts  Landing.d.ts.map  Landing.js  Landing.js.map  Landing.tsx  Login.tsx  MovementAnalysis.tsx  MyInjuries.tsx  PlanScreen.d.ts  PlanScreen.d.ts.map  PlanScreen.js  PlanScreen.js.map  PlanScreen.tsx  RunMode.d.ts  RunMode.d.ts.map  RunMode.js  (+12 more)
frontend/e2e/: smoke.spec.ts
ingestion/: garmin_sync.py  strava_importer.py
rag/: contextualize.py  knowledge_base.py  rerank.py  web_search.py
rag/sources/: corpus.md
rust_kernel/: Cargo.toml
rust_kernel/src/: dtw.rs  fft.rs  kalman.rs  lib.rs
storage/: seed_activity.csv
stride_vision/: .gitignore  Cargo.toml  README-KEYPOINTS.md  README.md
stride_vision/src/: lib.rs  main.rs
tests/: conftest.py  test_api.py  test_athlete.py  test_auth.py  test_biomechanics.py  test_coach_eval.py  test_coach_stream.py  test_coach_types.py  test_config.py  test_e2e.py  test_eval.py  test_fitness.py  test_form.py  test_form_coach.py  test_form_retry.py  test_garmin_sync.py  test_grounding.py  test_injuries.py  test_injury_bayes.py  test_injury_classifier.py  test_injury_dataset.py  test_injury_model.py  test_injury_progression.py  test_injury_quality.py  test_injury_risk.py  test_injury_seed.py  test_injury_taxonomy.py  test_jobs.py  test_knowledge_base.py  test_logging.py  test_profile_history.py  test_rag_eval.py  test_realtime.py  test_repository.py  test_rerank.py  test_risk_assessor.py  test_run_analysis.py  test_shoe.py  test_smoke.py  test_sql_agent.py  (+7 more)
(+55 files in other folders)
