# pyproject.toml — configuracao do projeto Python.
# App focado em analise de forma por VIDEO (visao computacional). O motor de visao e um
# crate Rust STANDALONE (stride_vision/, buildado pelo proprio cargo) rodado por subprocesso
# — nao ha extensao PyO3 pra compilar aqui, entao o build e Python puro (setuptools).

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "strideredge-os"
version = "2.0.0"
description = "IA de visao computacional para prevencao de lesao na corrida (analise de forma por video)."
requires-python = ">=3.9"
dependencies = [
    "duckdb",     # banco embutido (auth, analises de forma, perfil; base RAG em .db separado)
    "fastapi",    # framework da API REST
    "uvicorn",    # servidor que roda a API
    "structlog",  # logs estruturados em JSON
    "httpx",      # cliente HTTP (Ollama, embeddings, RAG)
    "ddgs",       # busca na web (fallback do RAG)
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["api", "core", "core.framework", "analytics", "rag"]
